# Zk-Enclave

./: .env.example  .gitignore  Cargo.toml  README.md  hardhat.config.ts  package-lock.json  package.json
compliance/: Cargo.toml
compliance/src/: asp_provider.rs  audit_trail.rs  lib.rs
contracts/: ASPRegistry.sol  PrivacyVault.sol  ZKVerifier.sol
contracts/libraries/: MerkleTree.sol  PoseidonT3.sol
phat-contract/: Cargo.toml  Dockerfile  build_docker.sh
phat-contract/src/: lib.rs  processor.rs  state.rs
scripts/: deploy.ts  redeploy.ts  test-deposit.ts  test-functional.ts  test-withdraw.ts
sdk/: README.md  package.json  tsconfig.json
sdk/src/: constants.ts  crypto.ts  index.ts  phat-client.ts  types.ts  vault.ts  zk-client.ts
web/: next.config.ts  package-lock.json  package.json
web/public/wasm/: package.json  zkenclave_circuits.d.ts  zkenclave_circuits.js  zkenclave_circuits_bg.wasm  zkenclave_circuits_bg.wasm.d.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/api/tee-audit/: route.ts
web/src/app/api/tee-batch/: route.ts
web/src/app/api/tee-withdraw/: route.ts
web/src/lib/: WebZKProofClient.ts  merkle-sha256.ts  merkle.ts  wasm-loader.ts  zkproof.ts
web/src/lib/wasm/: zkenclave_circuits.d.ts  zkenclave_circuits.js
web/src/types/: global.d.ts  wasm.d.ts
zk-circuits/: Cargo.toml
zk-circuits/src/: association_circuit.rs  lib.rs  merkle.rs  poseidon.rs  wasm.rs  withdrawal_circuit.rs
