[package]
name = "zkenclave-compliance"
version = "0.1.0"
edition = "2021"
authors = ["zkenclave-team"]
description = "Compliance infrastructure for privacy-preserving withdrawals"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
