[package]
name = "zkenclave-circuits"
version = "0.1.0"
edition = "2021"
authors = ["zkenclave-team"]
description = "Native Halo2 ZK circuits for privacy-preserving withdrawals"
license = "MIT"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
proptest = "1.4"

[features]
default = []
