[package]
name = "zkenclave-circuits"
version = "0.1.0"
edition = "2021"
authors = ["zkenclave-team"]
description = "Native Halo2 ZK circuits for privacy-preserving withdrawals"
license = "MIT"

[dependencies]
ff = "0.13"
rand = "0.8"
rand_chacha = "0.3.1"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0" }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"

[features]
default = []
