[package]
name = "zkenclave-circuits"
version = "0.1.0"
edition = "2021"
authors = ["zkenclave-team"]
description = "Native Halo2 ZK circuits for privacy-preserving withdrawals"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ff = "0.13"
rand = "0.8"
rand_chacha = "0.3.1"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0" }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3"

[dev-dependencies]
proptest = "1.4"
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true
